# node-agent

./: .coveragerc  .gitignore  .landscape.yml  .travis.yml  MANIFEST.in  Makefile  README.adoc  README.md  README.rst  node_agent.spec  requirements.develop.txt  requirements.txt  run_travis.sh  setup.cfg  setup.py  tendrl-message.socket  tendrl-node-agent.service  tendrl-node-agent.socket  tendrl-node-agent.spec  tendrl-noded.service  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/: add_osd_ceph_sample.py  create_ceph_cluster_sample_job.py  create_cluster_sample_job.py  create_gluster_cluster_sample_job.py  create_sample_job.py  expand_ceph_cluster_sample.py  generate_journal_mapping.py  logging.yaml.journald.sample  logging.yaml.syslog.sample  logging.yaml.timedrotation.sample  tendrl_definitions_node_agent.yaml
etc/logrotate.d/: tendrl-node-agent_logrotate.conf
etc/patches/: 0001-use-default-platform-configured-gluster-repo.patch
etc/rsyslog.d/: tendrl-node-agent.conf
etc/tendrl/: tendrl.conf.sample
etc/tendrl/node-agent/: logging.yaml.syslog.sample  logging.yaml.timedrotation.sample  node-agent-dev.conf.yaml  node-agent.conf.yaml.sample
releasenotes/source/: conf.py  index.rst  unreleased.rst
tendrl/: __init__.py
tendrl/integrations/ceph/: __init__.py
tendrl/integrations/gluster/: __init__.py  (+2 more)
tendrl/node_agent/: __init__.py  config.py  ini2json.py  log.py  test_ansible_runner.py
tendrl/provisioning/: __init__.py
tendrl_node_agent/: __init__.py
tendrl_node_agent/tests/: test_tendrl_node_agent.py
(+213 files in other folders)
