[metadata]
name = node_agent
summary = A python agent local to every managed storage node in a tendrl managed sds cluster
description-file =
    README.rst
author = Rohan Kanade
author-email = rkanade@redhat.com
home-page = http://www.tendrl.org/
classifier =
    Environment :: Tendrl
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: LGPL-2.1
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    tendrl_node_agent

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tendrl_node_agent/locale
domain = tendrl_node_agent

[update_catalog]
domain = tendrl_node_agent
output_dir = tendrl_node_agent/locale
input_file = tendrl_node_agent/locale/tendrl_node_agent.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tendrl_node_agent/locale/tendrl_node_agent.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source